--- a/ansible/roles/deploy/templates/pcap.service.j2
+++ b/ansible/roles/deploy/templates/pcap.service.j2
@@ -1,11 +1,10 @@
 [Unit]
-Description=Start litecoin mainnet seeder
+Description=Start litecoin mainnet pcap script
 After=redis.service
-
 
 [Service]
 WorkingDirectory=/home/ubuntu/bitnodes
-ExecStart=/home/ubuntu/.virtualenvs/bitnodes/bin/python -u seeder.py seeder.conf.default
+ExecStart=/usr/bin/python -u pcap.py conf/pcap.conf.default
 
 # output goes to /var/log/syslog
 StandardOutput=syslog
@@ -13,12 +12,8 @@ StandardError=syslog
 User=ubuntu
 Group=ubuntu
 
-TimeoutStartSec=10s
-Restart=on-failure
-RestartSec=20s
-
-SyslogIdentifier=seeder
+SyslogIdentifier=pcap
 
 [Install]
 WantedBy=multi-user.target
-
+#Alias=pcap.service
