--- a/ansible/roles/deploy/templates/crawl_slave2.service.j2
+++ b/ansible/roles/deploy/templates/crawl_slave2.service.j2
@@ -1,10 +1,10 @@
 [Unit]
-Description=Start litecoin mainnet crawler slave
+Description=Start litecoin mainnet crawler slave2
 After=redis.service crawl.service
 
 [Service]
 WorkingDirectory=/home/ubuntu/bitnodes
-ExecStart=/home/ubuntu/.virtualenvs/bitnodes/bin/python -u crawl.py crawl.conf.default slave
+ExecStart=/usr/bin/python -u crawl.py conf/crawl.conf.default slave
 
 # output goes to /var/log/syslog
 StandardOutput=syslog
@@ -12,12 +12,8 @@ StandardError=syslog
 User=ubuntu
 Group=ubuntu
 
-TimeoutStartSec=10s
-Restart=on-failure
-RestartSec=20s
-
-SyslogIdentifier=crawl_slave
+SyslogIdentifier=crawl_slave2
 
 [Install]
 WantedBy=multi-user.target
-
+#Alias=crawl_slave.service
