--- a/ansible/roles/deploy/templates/export.service.j2
+++ b/ansible/roles/deploy/templates/export.service.j2
@@ -1,11 +1,9 @@
 [Unit]
 Description=Exporter script for the litecoin crawler
-After=redis.service
-
 
 [Service]
 WorkingDirectory=/home/ubuntu/bitnodes
-ExecStart=/home/ubuntu/.virtualenvs/bitnodes/bin/python -u export.py export.conf.default
+ExecStart=/usr/bin/python -u export.py conf/export.conf.default
 
 # output goes to /var/log/syslog
 StandardOutput=syslog
@@ -13,13 +11,8 @@ StandardError=syslog
 User=ubuntu
 Group=ubuntu
 
-TimeoutStartSec=16s
-Restart=on-failure
-RestartSec=20s
-
 # This will default to "bundler" if we don't specify it
 SyslogIdentifier=export
 
 [Install]
 WantedBy=multi-user.target
-
