--- a/ansible/roles/deploy/templates/ping_slave2.service.j2
+++ b/ansible/roles/deploy/templates/ping_slave2.service.j2
@@ -1,11 +1,10 @@
 [Unit]
-Description=Ping script for the litecoin crawler
-After=redis.service
-
+Description=Ping slave2 script for the litecoin crawler
+After=redis.service ping.service
 
 [Service]
 WorkingDirectory=/home/ubuntu/bitnodes
-ExecStart=/home/ubuntu/.virtualenvs/bitnodes/bin/python -u ping.py ping.conf.default master
+ExecStart=/usr/bin/python -u ping.py conf/ping.conf.default slave
 
 # output goes to /var/log/syslog
 StandardOutput=syslog
@@ -13,13 +12,9 @@ StandardError=syslog
 User=ubuntu
 Group=ubuntu
 
-TimeoutStartSec=5s
-Restart=on-failure
-RestartSec=20s
-
 # This will default to "bundler" if we don't specify it
-SyslogIdentifier=ping
+SyslogIdentifier=ping_slave2
 
 [Install]
 WantedBy=multi-user.target
-
+#Alias=ping_slave.service
