--- a/ansible/roles/deploy/templates/tcpdump.service.j2
+++ b/ansible/roles/deploy/templates/tcpdump.service.j2
@@ -1,11 +1,9 @@
 [Unit]
-Description=Start litecoin mainnet pcap script
-After=redis.service
-
+Description=Start tcpdump for litecoin network traffic
 
 [Service]
 WorkingDirectory=/home/ubuntu/bitnodes
-ExecStart=/home/ubuntu/.virtualenvs/bitnodes/bin/python -u pcap.py pcap.conf.default
+ExecStart=/bin/bash start_tcpdump.sh
 
 # output goes to /var/log/syslog
 StandardOutput=syslog
@@ -13,12 +11,11 @@ StandardError=syslog
 User=ubuntu
 Group=ubuntu
 
-TimeoutStartSec=16s
+TimeoutStartSec=10s
 Restart=on-failure
 RestartSec=20s
 
-SyslogIdentifier=pcap
+SyslogIdentifier=tcpdump
 
 [Install]
 WantedBy=multi-user.target
-
